# libnso

./: Cargo.toml  LICENCE  README.md  build.rs
examples/: main.rs
src/: lib.rs  login.rs
src/apps/: common.rs  mod.rs  splatoon2.rs  splatoon3.rs
