[package]
name = "nso"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENCE"
description = "An interface to the Nintendo Switch Online APIs"
homepage = "https://github.com/starwort/libnso"
repository = "https://github.com/starwort/libnso"
readme = "README.md"
keywords = ["nso", "nintendo", "switch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
const_format = "0.2.30"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.11.13", features = ["serde_json", "json", "cookies", "gzip"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
sha2 = "0.10.6"
tokio = { version = "1.22.0", features = ["full"] }
